name:                sat
version:             0.1.0.0
synopsis:            Build and prepare propositions for SAT solvers.
description:         Please see README.md
homepage:            https://github.com/elben/sat
license:             BSD3
license-file:        LICENSE
author:              Elben Shira
maintainer:          elbenshira@gmail.com
copyright:           2016 Elben Shira
category:            None
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , transformers >= 0.4.2
                     , containers >= 0.5.6.2
                     , doctest >= 0.10.1
                     , QuickCheck >= 2.8
                     , random >= 1.1
  default-language:    Haskell2010

executable sat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sat
  default-language:    Haskell2010

test-suite sat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elben/sat
